# Beagle_SDR_GPS

./: .gitmodules  CHANGE_LOG  CROSS_COMPILE  KiwiSDR.bit  KiwiSDR.rx1.wf1.bit  KiwiSDR.rx14.wf0.bit  KiwiSDR.rx14.wf1.bit  KiwiSDR.rx3.wf3.bit  KiwiSDR.rx4.wf4.bit  KiwiSDR.rx8.wf2.bit  KiwiSDR.wb.108k.bit  KiwiSDR.wb.144k.bit  KiwiSDR.wb.192k.bit  KiwiSDR.wb.204k.bit  KiwiSDR.wb.240k.bit  KiwiSDR.wb.300k.bit  KiwiSDR.wb.72k.bit  Makefile  Makefile.comp.inc  RASPBERRYPI  README.md  _COPYRIGHT  _LICENSE  bits.h  cfg.c  cfg.cpp  cfg.h  clk.c  clk.cpp  clk.h  config.h  dl  dx.c  dx.cpp  dx.h  fpga.c  fpga.cpp  k  kiwi  kiwi.config  (+19 more)
apps/: Makefile  apps.c  apps.h
apps/wspr/: Makefile  fano.c  file.c  mettab.c  tab.c  wspr.c  wspr.h  wspr_util.c
arch/jacinto/: jacinto.h
arch/sitara/: sitara.h
cfg/: cfg.cpp  cfg.h
code/: Makefile  _COPYRIGHT  _LICENSE  cfg.h  config.h  dx.cfg.template  dx.h  f  fpga.c  g  kiwi.cfg  kiwi.cfg.template  kiwi.config  kiwi.dist.cfg  kiwi.h  main.cpp  ng  types.h  update.cpp  wrx  wrx.config  wrx.h
code/e_cpu/: Makefile  cmp.h  ecode.bin.h  kiwi.asm  wrx.asm
code/gps/: LiquidCrystal.cpp  Print.h  channel.cpp  ephemeris.cpp  gps.cpp  gps.h  search.cpp  solve.cpp  user.cpp
code/pru/: pru_realtime.c  pru_realtime.hp  prussdrv.h
code/rx/: data_pump.cpp  data_pump.h  rx_admin.cpp  rx_server.cpp  rx_sound.cpp  rx_waterfall.cpp
code/support/: coroutines.cpp  coroutines.h  debug.c  debug.h  misc.c  misc.h  printf.c  printf.h  timing.c  timing.h
code/ui/: admin.cpp  mfg.cpp
code/unix_env/: .bashrc  (+11 more)
dev/: clk.cpp  clk.h  eeprom.cpp  eeprom.h  fpga.cpp  fpga.h  gps_fe.cpp  gps_fe.h  leds.cpp  leds.h  rf_attn.cpp  rf_attn.h
dx/: EiBi.h  dx.cpp  dx.h
e_cpu/: Makefile  gps44.h  kiwi.asm  kiwi.gps.AACF.asm  kiwi.gps.ASPeCT.asm  kiwi.gps.asm  kiwi.sdr.asm  other.asm  other.cmds.asm  other.config
extensions/: Makefile  ext.c  ext.cpp  ext.h  ext_int.h
extensions/HFDL/dumphfdl/: CHANGELOG.md  CMakeLists.txt  README.md  b  d  systable.52.conf  systable.README.txt  systable.conf  systable.json
extensions/HFDL/dumphfdl/src/: .gitignore  CMakeLists.txt  ac_cache.c  ac_cache.h  ac_data.c  ac_data.h  acars.c  acars.h  block.c  block.h  cache.c  cache.h  complex2.h  crc.c  crc.h  dumpfile.c  dumpfile.h  fastddc.c  fastddc.h  fmtr-basestation.c  fmtr-basestation.h  fmtr-text.c  fmtr-text.h  globals.c  globals.h  hfdl.h  hfdl_chan.c  hfdl_config.h  hfdl_config.h.in  hfdl_fft.c  hfdl_fft.h  hfdl_fft_fftw.c  hfdl_main.c  hfnpdu.c  hfnpdu.h  input-buf.c  input-buf.h  input-common.c  input-common.h  input-file.c  (+47 more)
extensions/HFDL/dumphfdl/src/CMakeModules/: FindLiquidDSP.cmake
extensions/HFDL/dumphfdl/src/libfec/: CMakeLists.txt  hfdl_fec.h  hfdl_viterbi27_port.c
gps/: EKFPositionSolver.h  Ellipsoid.h  PosSolver.cpp  PosSolver.h  PositionSolverBase.h  SinglePointPositionSolver.h  _COPYRIGHT  cacode.h  channel.cpp  e1bcode.h  ephemeris.cpp  ephemeris.h  gps.cpp  gps.h  gps_test.cpp  kiwi_yield.h  sats.cpp  search.cpp  solve.cpp  stat.cpp
init/: EiBi.h  cfg.cpp  cfg.h  clk.cpp  clk.h  dx.cpp  dx.h  fpga.cpp
net/: ip_blacklist.cpp  ip_blacklist.h  nbuf.cpp  nbuf.h  net.cpp  net.h  services.cpp  services.h  update.cpp  update.h
pru/: __prussdrv.h  pru_realtime.cpp  pru_realtime.h  pru_realtime.p  pruss_intc_mapping.h  prussdrv.c  prussdrv.cpp
rx/: Makefile  conn.h  data_pump.cpp  data_pump.h  data_pump_shmem.h  mode.h  noise_filter.h  rx.h  rx_cmd.cpp  rx_cmd.h  rx_filter.h  rx_init.cpp  rx_monitor.cpp  rx_noise.h  rx_server.cpp  rx_server.h  rx_server_ajax.cpp  rx_server_ajax.h  rx_sound.cpp  rx_sound.h  rx_sound_cmd.cpp  rx_sound_cmd.h  rx_util.cpp  rx_util.h  rx_waterfall.cpp  rx_waterfall.h  str.c  str.h
support/: coroutines.cpp  coroutines.h  debug.c  debug.cpp  debug.h  kiwi_assert.h  kiwi_signal.h  leds.c  leds.cpp  mem.cpp  mem.h  misc.c  misc.cpp  misc.h  non_block.c  non_block.cpp  non_block.h  printf.c  printf.cpp  printf.h  sanitizer.h  security.cpp  security.h  shmem.cpp  shmem.h  shmem_config.h  simd.cpp  simd.h  stats.cpp  stats.h  str.cpp  str.h  timing.c  timing.cpp  timing.h
tools/: 256colors2.pl  FIR.m  Makefile  SOC.sh  a  ansi.cpp  audio.c  audio.cpp  bbai-flasher.sh  bbai64-flasher.sh  beagle-flasher.sh  beaglebone-black-flasher.sh  beaglebone-black-make-microSD-flasher-from-eMMC.sh  biquad.MZT.m  clog2.cpp  create-Debian-8-micro-SD-flasher.sh  customize-Debian-distro-with-KiwiSDR-config.sh  cw.cpp  d  decim.cpp  decimate.c  decimate.cpp  dx_huge.cpp  e1b_code.cpp  e1b_fec.c  ext64.c  ext64.cpp  file_optim.cpp  files_optim.cpp  hog.c  integrate.cpp  kiwiSDR-SOC.sh  kiwiSDR-customize-Debian-distro-with-KiwiSDR-config.sh  kiwiSDR-download-Debian-create-micro-SD-flasher.sh  kiwiSDR-download-KiwiSDR-BBAI_64-Debian-11-create-micro-SD-flasher.sh  kiwiSDR-download-KiwiSDR-BBG_BBB-Debian-11-create-micro-SD-flasher.sh  kiwiSDR-download-KiwiSDR-BBG_BBB-create-micro-SD-fixer.sh  kiwiSDR-download-KiwiSDR-Debian-10-create-micro-SD-flasher.sh  kiwiSDR-download-KiwiSDR-create-micro-SD-flasher.sh  kiwiSDR-init-eMMC-flasher-v3.sh  (+16 more)
ui/: admin.cpp  gps_ui.cpp  kiwi_ui.cpp  kiwi_ui.h  mfg.cpp
unix_env/: bashrc  bashrc.local  cape-bone-kiwi-S-00A0.D7.dts  cape-bone-kiwi-S-00A0.D8.dts  cape-bone-kiwi-S-00A0.dts  debian8.spi0.dts  eth0.network.STATIC  gdb_break  gdb_valgrind  gdbinit  interfaces.DHCP  kiwid  kiwid.service  profile  shadow  sources.D8.new.list  sources.D8.upgrade.list  sources.D9.new.list  v.sed
verilog/: .gitignore  KiwiSDR.xc7a35t.xdc  KiwiSDR.xc7z007s.xdc  KiwiSDR.xdc  Makefile  README  README.Vivado.2014.4.txt  README.Vivado.2017.4.txt  README.Vivado.2022.2.txt  cpu.v  host.v  kiwi.cfg.vh  kiwi.gen.vh  kiwi.inline.vh  kiwi.tcl  kiwi.v  kiwi.vh  make_proj.tcl  other.gen.vh
verilog.Vivado.2014.4.ip/: README
verilog.Vivado.2017.4.ip/: README
verilog.Vivado.2022.2.ip/: README
verilog.ip/: README
verilog.ip.Vivado.2017.4/: README
web/: Makefile  embed.h  kiwi.js  kiwi_util.js  kiwisdr.min.css  kiwisdr.min.js  mkdata.pl  nbuf.c  nbuf.h  services.c  services.cpp  web.c  web.cpp  web.h  web_server.cpp  web_util.cpp
(+1977 files in other folders)
